--- a/pagina.html
+++ b/pagina.html
@@ -29,15 +29,64 @@ width="400" height="300">
 			
 				<img>
 				A partir del 1 de julio llega a todo Latinoamérica la nueva versión de “Los Súper Campeones”. La serie japonesa se transmitirá por Cartoon Network y aparecerá durante el bloque Copa Toon, todos los domingos.
-
+				<br>
+				<br>		
 				Pese a que se emitirá en español latino. Solo dos de las voces originales volverán al animé. Jorge Roig Jr. (Steve Hyuga) y Ricardo Tejedo (Roberto Sedinho). Mientras que la actriz Rosalina Márquez estará a cargo de la voz del protagonista Oliver Atom.
-
+				<br>
+				<br>	
 				Otro detalle que cambiará respecto a la serie original. Será que en esta ocasión se respetarán los nombres en japonés. Así que Oliver Atom ahora será Ozora Tsubasa, Roberto Sedinho pasará a llamarse Roberto Hongo y Steve será Kokiro Hyuga.
-
+				<br>
+				<br>	
 				La nueva versión ya se estrenó en la cadena japonesa TV Tokyo y es un remake del manga original creado por Yoichi Takahashi.
 				</img>
+				<br>
+				<br>	
 			</div>
-						<div>
+						<div class="productos">
+						<table style="width:100%"> 
+						<style> 			
+							table,tr,th,td {border:solid 1px green;} 
+							</style>	
+ <tr>
+ <th>NOMBRE    </th>
+ <th>PRECIO </th>
+ <th>SUPERMERCADO</th>
+ </tr>
+ <tr>
+ <td align="center">Palta Kg</td>
+ <td align="center">$2.590</td>
+ <td align="center">Lider</td>
+
+ </tr>
+ <tr>
+ <td align="center">Sandia </td>
+ <td align="center">$4.990</td>
+ <td align="center">Lider</td>
+
+ </tr>
+ <tr>
+ <td align="center">Platano Kg</td>
+ <td align="center">$850</td>
+ <td align="center">Lider</td>
+  
+ </tr>
+ <tr>
+ <td align="center">Piña</td>
+ <td align="center">$1.490</td>
+ <td align="center">Lider</td>
+  
+ </tr>
+ <tr>
+<td align="center">Naranas 3Kg</td>
+ <td align="center">$2.390</td>
+ <td align="center">Lider</td>
+
+ </tr>
+</table>
+<br>
+				<br>	<br>
+				<br>	
+<div class="productos">
 						<table style="width:100%"> 
 						<style> 			
 							table,tr,th,td {border:solid 1px green;} 
