--- a/pagina.html
+++ b/pagina.html
@@ -82,8 +82,11 @@ width="400" height="300">
  <td align="center">Lider</td>
 
  </tr>
+
 </table>
+<a href= "https://www.lider.cl/" >Lider</a>
 <br>
+
 				<br>	<br>
 				<br>	
 <div class="productos">
@@ -97,38 +100,38 @@ width="400" height="300">
  <th>SUPERMERCADO</th>
  </tr>
  <tr>
- <td align="center">Palta Kg</td>
- <td align="center">$2.590</td>
- <td align="center">Lider</td>
+ <td align="center">Camiseta Niupi Azul</td>
+ <td align="center">$15.000</td>
+ <td align="center">MercadoLibre</td>
 
  </tr>
  <tr>
- <td align="center">Sandia </td>
- <td align="center">$4.990</td>
- <td align="center">Lider</td>
+ <td align="center">Camiseta Niupi Roja </td>
+ <td align="center">$15.000</td>
+ <td align="center">MercadoLibre</td>
 
  </tr>
  <tr>
- <td align="center">Platano Kg</td>
- <td align="center">$850</td>
- <td align="center">Lider</td>
+ <td align="center">Short Niupi Azul</td>
+ <td align="center">$10.000</td>
+ <td align="center">MercadoLibre</td>
   
  </tr>
  <tr>
- <td align="center">Piña</td>
- <td align="center">$1.490</td>
- <td align="center">Lider</td>
+ <td align="center">Short Niupi Roja</td>
+ <td align="center">$10.000</td>
+ <td align="center">MercadoLibre</td>
   
  </tr>
  <tr>
-<td align="center">Naranas 3Kg</td>
- <td align="center">$2.390</td>
- <td align="center">Lider</td>
+<td align="center">Calcetas Niupi</td>
+ <td align="center">$3.000</td>
+ <td align="center">MercadoLibre</td>
 
  </tr>
 </table>
 				</div>
- <a href= ”https://www.lider.cl/supermercado/search?Ntt=fruta&ost=fruta”>Lider </a>
+ <a href= "https://www.mercadolibre.cl/" >Mercado Libre</a>
 						
  	</body>
  </html>
