--- a/pagina.html
+++ b/pagina.html
@@ -97,7 +97,7 @@ width="400" height="300">
  <tr>
  <th>NOMBRE    </th>
  <th>PRECIO </th>
- <th>SUPERMERCADO</th>
+ <th>PÁGINA WEB</th>
  </tr>
  <tr>
  <td align="center">Camiseta Niupi Azul</td>
