--- a/pagina.html
+++ b/pagina.html
@@ -54,31 +54,31 @@ width="400" height="300">
  </tr>
  <tr>
  <td align="center">Palta Kg</td>
- <td align="center">$2.590</td>
+ <td align="center">2590</td>
  <td align="center">Lider</td>
 
  </tr>
  <tr>
  <td align="center">Sandia </td>
- <td align="center">$4.990</td>
+ <td align="center">4990</td>
  <td align="center">Lider</td>
 
  </tr>
  <tr>
  <td align="center">Platano Kg</td>
- <td align="center">$850</td>
+ <td align="center">850</td>
  <td align="center">Lider</td>
   
  </tr>
  <tr>
- <td align="center">Piña</td>
- <td align="center">$1.490</td>
+ <td align="center">Pina</td>
+ <td align="center">1490</td>
  <td align="center">Lider</td>
   
  </tr>
  <tr>
-<td align="center">Naranas 3Kg</td>
- <td align="center">$2.390</td>
+<td align="center">Naranjas 3Kg</td>
+ <td align="center">2390</td>
  <td align="center">Lider</td>
 
  </tr>
@@ -101,31 +101,31 @@ width="400" height="300">
  </tr>
  <tr>
  <td align="center">Camiseta Niupi Azul</td>
- <td align="center">$15.000</td>
+ <td align="center">15,000</td>
  <td align="center">MercadoLibre</td>
 
  </tr>
  <tr>
  <td align="center">Camiseta Niupi Roja </td>
- <td align="center">$15.000</td>
+ <td align="center">15,000</td>
  <td align="center">MercadoLibre</td>
 
  </tr>
  <tr>
  <td align="center">Short Niupi Azul</td>
- <td align="center">$10.000</td>
+ <td align="center">10,000</td>
  <td align="center">MercadoLibre</td>
   
  </tr>
  <tr>
  <td align="center">Short Niupi Roja</td>
- <td align="center">$10.000</td>
+ <td align="center">10,000</td>
  <td align="center">MercadoLibre</td>
   
  </tr>
  <tr>
 <td align="center">Calcetas Niupi</td>
- <td align="center">$3.000</td>
+ <td align="center">3,000</td>
  <td align="center">MercadoLibre</td>
 
  </tr>
